--- a/src/images/index.html
+++ b/src/images/index.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <header class="header-conteiner">
         <nav class="nav-header">
-            <a class="digital-store-header" href="#"><img class="logo-digital" src="./logo-digital.png"
+            <a class="digital-store-header" href="#"><img class="logo-digital" src="logo-digital.png"
                     alt=""> Digital Store</a>
             <input class="input-header" type="text" name="" id="" placeholder="Pesquisar produto...">
-            <img class="search-icon" src="./lupa.png" alt="">
+            <img class="search-icon" src="lupa.png" alt="">
             <a class="cadastrar" href="">Cadastre-se</a>
 
             <div class="navigation-header">
@@ -39,13 +39,22 @@
             </div>
             <div class="style-button">
                 <button class="entrar-header">Entrar</button>
-                <img class="carrinho" src="./Group 53581.png" alt="">
+                <img class="carrinho" src="carrinho-inteligente.png" alt="">
             </div>
         </nav>
 
     </header>
-
-
+    <div class="carrossel">
+        <div class="slide ativo">
+            <h1>Queima de estoque Nike <span>🔥</span></h1>
+            <p>Melhores ofertas personalizadas</p>
+            <button class="botao">Ver Ofertas</button>
+            <img src="tenis.png" alt="Tênis Nike">
+        </div>
+        <!-- Adicione mais slides se necessário -->
+    </div>
+    <script src="script.js"></script>
+    
     <div>Nav</div>
     <div>Hero</div>
     <div>Coleções em Destaque</div>
@@ -59,7 +68,7 @@
                 <div class="div-products-line-item1">
                     <p class="products-p-off">30% OFF</p>
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -75,7 +84,7 @@
                 <div class="div-products-line-item1">
                     <p class="products-p-off">30% OFF</p>
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -91,7 +100,7 @@
                 <div class="div-products-line-item1">
                     <!-- <p class="products-p-off">30% OFF</p> -->
                     <div class="div-products-img-div">
-                        <img class="products-img" src=".tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -107,7 +116,7 @@
                 <div class="div-products-line-item1">
                     <!-- <p class="products-p-off">30% OFF</p> -->
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -125,7 +134,7 @@
                 <div class="div-products-line-item1">
                     <p class="products-p-off">30% OFF</p>
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -141,7 +150,7 @@
                 <div class="div-products-line-item1">
                     <p class="products-p-off">30% OFF</p>
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -157,7 +166,7 @@
                 <div class="div-products-line-item1">
                     <!-- <p class="products-p-off">30% OFF</p> -->
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -173,7 +182,7 @@
                 <div class="div-products-line-item1">
                     <!-- <p class="products-p-off">30% OFF</p> -->
                     <div class="div-products-img-div">
-                        <img class="products-img" src="./tenis1.png">
+                        <img class="products-img" src="../assets/Mask group.png">
                     </div>
                 </div>
                 <div class="div-products-line-item2">
@@ -191,7 +200,7 @@
     <div
         class="oferta-especial flex flex-col md:flex-row items-center md:items-start md:justify-between p-4 md:p-8 lg:p-12 bg-white shadow-lg rounded-lg">
         <div class="img-ofep w-full md:w-1/2 lg:w-1/3">
-            <img src="/images/tenis5.jpg" alt="Imagem do Produto" class="w-full h-auto">
+            <img src="../assets/tenisEspecial.png" alt="Imagem do Produto" class="w-full h-auto">
         </div>
 
         <div class="text-ofep mt-6 md:mt-0 md:ml-8 lg:ml-12 w-full md:w-1/2 lg:w-2/3 text-center md:text-left">
